fix screen not fitting to bottom problem

--- a/display/src/css/styles.css
+++ b/display/src/css/styles.css
@@ -5,7 +5,6 @@ body, html {
     margin: 0;
     justify-content: center;
     align-items: center;
-    background-color: black;
 }
 #content {
     display: flex;
